Fix issue with react-modal being behind comments

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,22 @@
   --accentPurple: hsl(266deg 93% 50%);
 }
 
+/* from astro version
+		--primaryFont: #1f1d3f;
+		--primaryBg: #f8eedd;
+		--accentGreen: #178c6d;
+		--accentPink: #eb8a90;
+		--accentBlue: #5299D3;
+
+    from svelte version
+    --primaryFont: hsl(34, 58%, 78%);
+    --primaryBg: hsl(202, 63%, 18%);
+    --accentOrange: hsl(32, 67%, 40%);
+    --accentGreen: hsl(134, 35%, 57%);
+    --accentGold: hsl(43, 65%, 66%);
+    --accentRed: hsl(358, 43%, 66%);
+ */
+
 *,
 *::after,
 *::before {
@@ -46,27 +62,6 @@ img {
   inset 0px 0px 50px var(--primaryBg),
   inset 0px 0px 100px var(--primaryBg),
   inset 0px 0px 100px var(--primaryBg);
-}
-
-.comment {
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(to bottom right, transparent 0% 25%, var(--primaryFont) 25% );
-  padding: .5rem;
-  border-radius: 2px;
-}
-
-.comment::after,
-.comment::before {
-  content: '';
-  position: absolute;
-  inset: 1px;
-  z-index: -1;
-  background-color: var(--primaryBg);
-}
-
-.login {
-  transition: transform 500ms;
 }
 
 a[data-active = true] {
